--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -48,7 +48,17 @@
     <dependency>
       <groupId>origami</groupId>
       <artifactId>origami</artifactId>
-      <version>4.3.0-1</version>
+      <version>4.3.0-8</version>
+    </dependency>
+    <dependency>
+      <groupId>origami</groupId>
+      <artifactId>filters</artifactId>
+      <version>1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>origami</groupId>
+      <artifactId>sources</artifactId>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
