--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>origami</groupId>
       <artifactId>origami</artifactId>
-      <version>4.5.0-0</version>
+      <version>4.5.0</version>
     </dependency>
     <dependency>
       <groupId>origami</groupId>
