--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>origami</groupId>
   <artifactId>maven-archetype</artifactId>
-  <version>4.7</version>
+  <version>4.7.0-1</version>
   <packaging>maven-archetype</packaging>
 
   <name>Archetype - maven-archetype</name>
